--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-body {color:lightblue; 
+body {
+	color:lightblue; 
 	TEXT-ALIGN: center;
 	MARGIN-RIGHT: auto;
 	MARGIN-LEFT: auto;
 	background-image:url(http://h.hiphotos.baidu.com/zhidao/pic/item/b3119313b07eca803adb0a4a932397dda0448344.jpg);
-	height:14px;
+
 	vertical-align:middle;
-	line-height:14px;
+
 	font-size:120px;
+}
+
+#ipad_pic {
+	width: 450px;
+	height: 300px;
+}
