--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	color:lightblue; 
-	TEXT-ALIGN: center-50px;
+	TEXT-ALIGN: center
+	;
 	MARGIN-RIGHT: auto;
 	MARGIN-LEFT: auto;
 	background-image:url(http://h.hiphotos.baidu.com/zhidao/pic/item/b3119313b07eca803adb0a4a932397dda0448344.jpg);
