--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	;
 	MARGIN-RIGHT: auto;
 	MARGIN-LEFT: auto;
-	background-image:url(http://h.hiphotos.baidu.com/zhidao/pic/item/b3119313b07eca803adb0a4a932397dda0448344.jpg);
+	background-image:url(http://b.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=b40075164510b912bf94fefaf6cdd035/7aec54e736d12f2ec0299ccd4dc2d5628535686a.jpg);
 
 	vertical-align:middle;
 
