--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	;
 	MARGIN-RIGHT: auto;
 	MARGIN-LEFT: auto;
-	background-image:url(http://b.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=b40075164510b912bf94fefaf6cdd035/7aec54e736d12f2ec0299ccd4dc2d5628535686a.jpg);
+	background-image:url(http://image.zcool.com.cn/2013/0/31/m_1383805247798.jpg);
 
 	vertical-align:middle;
 
