--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 	;
 	MARGIN-RIGHT: auto;
 	MARGIN-LEFT: auto;
-	background:darkblue;
+	background-image:url(http://c.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=d2fcf0abadc379317d3d8e2ddef49b73/838ba61ea8d3fd1feb389097324e251f95ca5f6d.jpg);
 	vertical-align:middle;
 
 	font-size:60px
